RESOLVED FIXED235627
REGRESSION (r281306): Non-breaking space incorrectly collapsed when webkit-nbsp-mode is set to "space"
https://bugs.webkit.org/show_bug.cgi?id=235627
Summary REGRESSION (r281306): Non-breaking space incorrectly collapsed when webkit-nb...
alan
Reported 2022-01-25 21:13:11 PST
ssia
Attachments
Patch (20.61 KB, patch)
2022-01-25 21:40 PST, alan
no flags
Patch (24.37 KB, patch)
2022-01-26 11:19 PST, alan
no flags
Patch (24.68 KB, patch)
2022-01-26 15:24 PST, alan
no flags
alan
Comment 1 2022-01-25 21:13:41 PST
alan
Comment 2 2022-01-25 21:40:13 PST
alan
Comment 3 2022-01-26 11:19:09 PST
alan
Comment 4 2022-01-26 15:24:43 PST
EWS
Comment 5 2022-01-26 15:54:59 PST
Committed r288650 (246458@main): <https://commits.webkit.org/246458@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 450078 [details].
Note You need to log in before you can comment on or make changes to this bug.