Cherry-pick 6c52fdf6a7ae. rdar://problem/92129881

REGRESSION (r281306): Non-breaking space incorrectly collapsed when webkit-nbsp-mode is set to "space"
    https://bugs.webkit.org/show_bug.cgi?id=235627
    <rdar://88004831>

    Reviewed by Antti Koivisto.

    Source/WebCore:

    "-webkit-nbsp-mode: space" has a peculiar collapsing behavior. It only collapses as leading content
    preceded by forced line break.

    <div style="-webkit-nbsp-mode: space; width: 0px;">
      first_line&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;second_line
    </div>
    The non-breaking space is collapsed. It does not show on the second line as leading content.

    <div style="-webkit-nbsp-mode: space; width: 0px;">
      first_line<br>
      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;second_line
    </div>
    The non-breaking space is NOT collapsed. It shows up as leading content on the second line, indenting the "second_line" text content.

    To mimic this legacy behavior, it's easier just to switch back to handling nbsp; as a non-whitespace inline item and
    collapse it as leading content (depending on the breaking context).
    (as opposed to customize regular whitespace content collapsing behavior just to support this quirk)

    Test: fast/text/collapsible-non-breaking-space.html

    * layout/formattingContexts/inline/InlineItemsBuilder.cpp:
    (WebCore::Layout::moveToNextNonWhitespacePosition): remove special nbsp; handling
    (WebCore::Layout::InlineItemsBuilder::handleTextContent): create an inline text item for the special mon-breaking space content.
    * layout/formattingContexts/inline/InlineLine.cpp:
    (WebCore::Layout::Line::initialize):
    (WebCore::Layout::Line::appendTextContent):
    * layout/formattingContexts/inline/InlineLine.h:
    * layout/formattingContexts/inline/InlineLineBuilder.cpp:
    (WebCore::Layout::LineBuilder::inlineItemWidth const):
    (WebCore::Layout::LineBuilder::initialize):
    (WebCore::Layout::LineBuilder::candidateContentForLine):
    (WebCore::Layout::LineBuilder::handleInlineContent):
    (WebCore::Layout::LineBuilder::rebuildLine):
    * layout/formattingContexts/inline/InlineLineBuilder.h:
    (WebCore::Layout::LineBuilder::isFirstLine const):
    * layout/formattingContexts/inline/InlineTextItem.cpp:
    (WebCore::Layout::InlineTextItem::isCollapsibleNonBreakingSpace const):
    * layout/formattingContexts/inline/InlineTextItem.h:

    LayoutTests:

    * fast/text/collapsible-non-breaking-space-expected.html: Added.
    * fast/text/collapsible-non-breaking-space.html: Added.
    * platform/ios/fast/text/whitespace/nbsp-mode-and-linewraps-expected.txt: A slight behavior change with trailing content trimming, but
    not generally noticeable and very specific to this non-standard property.
    * platform/mac/fast/text/whitespace/nbsp-mode-and-linewraps-expected.txt:

    Canonical link: https://commits.webkit.org/246458@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@288650 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/245886.755@safari-613-branch